2012-05-08  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile.gcc (CFLAGS): Dropping -pedantic, adding -W.

	* dict.c (free_nodes): Unused static function removed.
	(dnode_alloc, dnode_free, new_node, del_node): Added casts
	of unused arguments to void to suppress unused variable warning.

	* docs.ltx: Revised out of date section about what C++ identifiers are
	exposed by dict.h. Fixed typo.

	* except.c (bottom_level): Fixed waring about return value from
	fgets being ignored.
	(main): Switched to no-arguments main since argc and argv were
	not used.

	* hash.c (hnode_alloc, hnode_free, new_node): Added casts
	of unused arguments to void to suppress unused variable warning.

	* sfx.c (CONTEXT_T_INIT): New macro.
	(chk_cast): Use CONTEXT_T_INIT macro to initialize variables
	of type context_t.

2009-11-12  Kaz Kylheku  <kaz@gmail.com>

	Terminology change. The alloc traits should use item
	and not node terminology, since destruction is applied
	to items, not dnodes.

	* dict.h (kazlib::static_nodes): Renamed to static_items.
	(kazlib::dynamic_nodes): Renamed to dynamic_items.
	(kazlib::placement_nodes): Renamed to placement_items.
	(kazlib::dict_dfl_feat, kazlib::alloc_feature): Declarations updated.
	(kazlib::trait_combinator<>): Partial specializations updated.

	* docs.ltx: Updated.


2009-11-12  Kaz Kylheku  <kaz@kylheku.com>

	* dict.c (dict_clear): Reverts back to internal linkage.

	* dict.h (dict_clear): Declaration removed.
	(kazlib::dict_base, kazlib::dict_bdbk, kazlib::dict_bdmk,
	kazlib::dict_mdbk, kazlib::dict_mkmk): Template classes removed.

	* docs.ltx: Revamped documentation of C++ utilities for dict,
	from the perspective of the trait combination paradigm.
	The base class is now just dict.


2009-11-12  Kaz Kylheku  <kaz@kylheku.com>

	Added a new function safe_traverse, which performs an iterative
	bottom-up traversal rather than a recursive one.
	
	dict_free_nodes retargetted to use this function.
	
	dict_clear exposed as external function.
