@@ -1,5 +1,12 @@
 2012-05-08  Kaz Kylheku  <kaz@kylheku.com>
 
+	* Makefile.gcc: Revamped to take advantage of various GNU Make
+	tricks. Builds new C++ test case, which is taken from the LaTeX doc.
+
+	* tests/dict-1.cc: New file.
+
+2012-05-08  Kaz Kylheku  <kaz@kylheku.com>
+
 	* Makefile.gcc (CFLAGS): Dropping -pedantic, adding -W.
 
 	* dict.c (free_nodes): Unused static function removed.
